Icon list - Link visibility for Image issue fixed

--- a/src/blocks/icon-list/style.scss
+++ b/src/blocks/icon-list/style.scss
@@ -4,9 +4,60 @@
  * CSS for both Frontend+Backend.
  */
 
-.uagb-buttons__outer-wrap {
+.uagb-icon-list__outer-wrap {
 
-	.uagb-buttons__wrap {
+	.uagb-icon-list__wrap {
+		-js-display: flex;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -moz-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: flex-start;
+		-webkit-align-items: flex-start;
+		-moz-box-align: flex-start;
+		-ms-flex-align: flex-start;
+		align-items: flex-start;
+		-webkit-box-pack: flex-start;
+		-webkit-justify-content: flex-start;
+		-moz-box-pack: flex-start;
+		-ms-flex-pack: flex-start;
+		justify-content: flex-start;
+	}
+
+	.uagb-icon-list__wrapper:focus,
+	.uagb-icon-list__wrapper:active,
+	.uagb-icon-list__wrapper:visited {
+		text-decoration: none;
+	}
+
+	a.uagb-button__link:focus {
+		box-shadow: none;
+	}
+
+	.uagb-icon-list__wrapper {
+		padding: 0;
+	    margin-left: 5px;
+		margin-right: 5px;
+		-webkit-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		transition: all 0.5s;
+		display: inline-flex;
+		text-align: center;
+	}
+
+	.uagb-icon-list__content-wrap,
+	.uagb-icon-list__source-wrap {
+		width: inherit;
+		display: inline-block;
+	}
+
+	.uagb-icon-list__source-wrap {
+		margin-right: 15px;
+	}
+
+	.uagb-icon-list__content-wrap {
+		color: #3a3a3a;
 		-js-display: flex;
 		display: -webkit-box;
 		display: -webkit-flex;
@@ -18,51 +69,24 @@
 		-moz-box-align: center;
 		-ms-flex-align: center;
 		align-items: center;
-		-webkit-box-pack: center;
-		-webkit-justify-content: center;
-		-moz-box-pack: center;
-		-ms-flex-pack: center;
-		justify-content: center;
 	}
 
-	.uagb-button__active,
-	.uagb-button__active:focus {
-		box-shadow: 0 0 0 1px #5b9dd9, 0 0 2px 1px rgba(30, 140, 190, .8);
+	.uagb-icon-list__source-icon,
+	.uagb-icon-list__source-icon:before {
+		font-size: 40px;
+		width: 40px;
+		height: 40px;
 	}
 
-	a.uagb-button__link:focus {
-		box-shadow: none;
+	.uagb-icon-list__source-image {
+		width: 40px;
 	}
 
-	.uagb-button__wrapper {
-		padding: 0;
-	    border: 1px solid #333;
-    	border-radius: 2px;
-	    margin-left: 5px;
-		margin-right: 5px;
-		-webkit-transition: all 0.5s;
-		-o-transition: all 0.5s;
-		transition: all 0.5s;
-		display: inline-flex;
-	}
-
-	.uagb-button__wrapper:first-child {
+	.uagb-icon-list__wrapper:first-child {
 		margin-left: 0;
 	}
 
-	.uagb-button__wrapper:last-child {
+	.uagb-icon-list__wrapper:last-child {
 		margin-right: 0;
-	}
-
-	.uagb-button__wrapper a.uagb-button__link {
-	    padding: 10px 14px;
-		width: 100%;
-		height: 100%;
-		color: #333;
-	}
-
-	.uagb-button__wrapper a.uagb-button__link,
-	.uagb-button__wrapper:hover a.uagb-button__link {
-		color: #333;
 	}
 }
